win/CTRL/Bindings/ctrl_native.h

/* SPDX-License-Identifier: All-Rights-Reserved
 * CTRL native C ABI — auto-generated by cbindgen.
 * DO NOT EDIT. Source: src-tauri/src/ffi/native.rs */

#ifndef CTRL_NATIVE_H
#define CTRL_NATIVE_H

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>

#define SINGLE_CTRL_MAX_DURATION_MS 250

/**
 * Returns the last error message recorded on this thread. Caller must
 * `ctrl_native_string_free` the returned pointer (if non-null).
 */
char *ctrl_native_error_get_last(void);

/**
 * Free a string returned by any other `ctrl_native_*` function.
 */
void ctrl_native_string_free(char *p);

/**
 * Initialize the L1 kernel runtime. Must be called once at app start.
 * `data_dir`: UTF-8 NUL-terminated path to local data dir.
 */
int32_t ctrl_native_kernel_boot(const char *data_dir);

/**
 * Returns JSON-encoded kernel health snapshot. Caller frees `out`.
 */
int32_t ctrl_native_kernel_health(char **out);

int32_t ctrl_native_mcp_register(const char *descriptor_json);

int32_t ctrl_native_mcp_connect(const char *server_id);

int32_t ctrl_native_mcp_list_tools(const char *server_id, char **out);

int32_t ctrl_native_mcp_invoke(const char *server_id,
                               const char *tool_name,
                               const char *arguments_json,
                               char **out);

int32_t ctrl_native_mcp_list_installed(char **out);

int32_t ctrl_native_mcp_disconnect(const char *server_id);

#endif  /* CTRL_NATIVE_H */